...
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="@+id/empty_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/streak_text"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/streak"
        android:textColor="@color/pastel_red"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskDisplayView"
        android:layout_width="597dp"
        android:layout_height="600dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/newTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

...
