<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/rewards" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/todo" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_notifications_black_24dp"
...
