<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/titleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="680dp"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/submit"
        android:backgroundTint="@color/smoke_black"
        android:textColor="@color/pastel_red"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />


</androidx.constraintlayout.widget.ConstraintLayout>