...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:background="@drawable/bg_rounded_corners_red"
        android:text="@string/submit"
        android:textColor="@color/smoke_white"
        app:backgroundTint="@color/pastel_red"
...
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:background="@drawable/bg_rounded_corners_smoke_white"
        android:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
