...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/experience_bar"
        app:layout_constraintTop_toTopOf="@+id/userInfoBG"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/coin_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="start"
        android:text="@string/coins"
        android:textColor="@color/smoke_black"
...
